--- a/机器学习/回归/正则化/Regularization.ipynb
+++ b/机器学习/回归/正则化/Regularization.ipynb
@@ -74,12 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 结果可视化函数--    模型复杂度， 正则化系数 , 模型参数(*可迭代对象/ **字典)\n",
     "def plot_model(model_class, polynomail ,alphas, **model_kargs):\n",
+    "    # zip 将多个可迭代对象（如列表、元组等）中的元素逐一配对，返回一个由元组组成的迭代器\n",
     "    for alpha,style in zip(alphas, ('b-','g--','r:')):\n",
     "        model = model_class(alpha=alpha, **model_kargs)\n",
     "        if polynomail:\n",
