--- a/机器学习/逻辑回归/Non_linear_logistic_regression.ipynb
+++ b/机器学习/逻辑回归/Non_linear_logistic_regression.ipynb
@@ -190,7 +190,7 @@
    ],
    "source": [
     "thetas , cost_histories =  logisticregression.train(max_iters)\n",
-    "columns = []  # 列  行\n",
+    "columns = []  # 列  行 row\n",
     "for theta_index in range(0,thetas.shape[0]):\n",
     "    columns.append('theta'+str(theta_index))\n",
     "labels = logisticregression.unique_labels\n",
