--- a/机器学习/逻辑回归/softmax_logistic_regressin.ipynb
+++ b/机器学习/逻辑回归/softmax_logistic_regressin.ipynb
@@ -505,8 +505,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# softmax 函数\n",
+    "print(1)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
