--- a/机器学习/逻辑回归/Non_linear_logistic_regression.ipynb
+++ b/机器学习/逻辑回归/Non_linear_logistic_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
     "        num_examples = data.shape[0]\n",
     "        data_processed = prepare_for_training(data, self.polynomial_degree, self.sinusoid_degree, self.normalize_data)[0]\n",
     "        prob = LogisticRegression.hypothesis(data_processed, self.theta.T)\n",
-    "        max_prob_index = np.argmax(prob, axis=1) #把概率最大的那个值拿出来\n",
+    "        max_prob_index = np.argmax(prob, axis=1) #把概率最大的下标那个值拿出来\n",
     "        class_prediction = np.empty(max_prob_index.shape, dtype=object)\n",
     "        for index, label in enumerate(self.unique_labels):\n",
     "            class_prediction[max_prob_index == index] = label\n",
