--- a/机器学习/逻辑回归/softmax_logistic_regressin.ipynb
+++ b/机器学习/逻辑回归/softmax_logistic_regressin.ipynb
@@ -1579,6 +1579,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 决策边界绘制\n",
+    "1. 训练好模型，提供预测结果或者预测概率\n",
+    "2. 生成棋盘数据,也是测试数据\n",
+    "```\n",
+    "法1：\n",
+    "    X = np.linspace(x_min,x_max,samples)\n",
+    "    Y = np.linspace(y_min,y_max,samples)\n",
+    "    for x_index, x in enumerate(X):\n",
+    "        for y_index, y in enumerate(Y):\n",
+    "            data = np.array([[x,y]])\n",
+    "法2：\n",
+    "    x0,x1 = np.meshgrid(np.linspace(0,7,500).reshape(-1,1),np.linspace(0,2.7,200).reshape(-1,1))\n",
+    "    x_new = np.c_[x0.ravel(),x1.ravel()]\n",
+    "```\n",
+    "            \n",
+    "3. 预测\n",
+    "```\n",
+    "    prediction = logisticregression.predict(data)\n",
+    "            if prediction == 1:\n",
+    "                Z[x_index][y_index] = 1\n",
+    "```\n",
+    "4. 绘制等高线图\n",
+    "\n",
+    "```\n",
+    "plt.contour(X,Y,Z)\n",
+    "plt.show()\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
