--- a/机器学习/聚类/k_means.ipynb
+++ b/机器学习/聚类/k_means.ipynb
@@ -436,12 +436,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 评估指标inertia_"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO kmeans.transform  评估指标inertia_"
+    "# TODO kmeans.transform  \n"
    ]
   },
   {
