--- a/机器学习库/python_numpy.ipynb
+++ b/机器学习库/python_numpy.ipynb
@@ -1658,6 +1658,70 @@
     "a  = np.searchsorted([1,2,3,4,5] , 3)\n",
     "a"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "359133d9",
+   "metadata": {},
+   "source": [
+    "数据标准化和归一化是两种常见的数据预处理方法，它们在处理方式和应用场景上有明显区别：\n",
+    "\n",
+    "### **1. 定义与公式**\n",
+    "- **标准化（Standardization）**  \n",
+    "  将数据转换为均值为0、标准差为1的分布。公式为：  \n",
+    "  $$\n",
+    "  X_{\\text{标准化}} = \\frac{X - \\mu}{\\sigma}\n",
+    "  $$  \n",
+    "  其中，$\\mu$ 是均值，$\\sigma$ 是标准差。处理后数据保留原始分布形状，但范围不固定。\n",
+    "\n",
+    "- **归一化（Normalization）**  \n",
+    "  将数据缩放到特定区间（如[0,1]或[-1,1]）。常用Min-Max方法，公式为：  \n",
+    "  $$\n",
+    "  X_{\\text{归一化}} = \\frac{X - X_{\\min}}{X_{\\max} - X_{\\min}}\n",
+    "  $$  \n",
+    "  处理后数据严格限定在目标区间内，分布形状可能因缩放而改变。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **2. 核心区别**\n",
+    "| **特征**               | **标准化**                          | **归一化**                          |\n",
+    "|------------------------|------------------------------------|------------------------------------|\n",
+    "| **目标**               | 消除量纲，使数据符合标准正态分布。     | 消除量纲，将数据缩放到固定区间。       |\n",
+    "| **异常值敏感性**       | 对异常值相对鲁棒（依赖标准差）。       | 对异常值敏感（依赖最大/最小值）。      |\n",
+    "| **数据分布**           | 保留原始分布（如偏态分布）。           | 可能改变分布形状（如压缩到[0,1]）。    |\n",
+    "| **输出范围**           | 无固定范围，取决于原始数据分布。       | 严格限定在目标区间（如[0,1]）。        |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **3. 应用场景**\n",
+    "- **标准化适用场景**  \n",
+    "  - 数据存在异常值或分布未知时（如线性回归、逻辑回归、SVM）。  \n",
+    "  - 需要数据符合正态分布的算法（如主成分分析/PCA、线性判别分析/LDA）。  \n",
+    "  - 基于梯度下降的模型（如神经网络），加速收敛。\n",
+    "\n",
+    "- **归一化适用场景**  \n",
+    "  - 需要固定输入范围的模型（如KNN、神经网络、图像处理）。  \n",
+    "  - 数据分布边界明确且无显著异常值（如像素值归一化到[0,1]）。  \n",
+    "  - 基于距离的算法（如K-Means、协同过滤），消除特征尺度差异。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **4. 选择建议**\n",
+    "- **优先选择标准化**：当数据存在异常值或算法假设数据符合正态分布时（如线性模型、深度学习）。  \n",
+    "- **优先选择归一化**：当数据边界明确且需要固定输入范围时（如图像处理、距离计算）。  \n",
+    "- **异常值处理**：若使用归一化，建议先处理异常值（如截断或替换），避免缩放后数据分布失真。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **示例对比**\n",
+    "假设数据为 `[1, 2, 3, 4, 1000]`（含异常值1000）：  \n",
+    "- **标准化**：均值为202，标准差≈399，处理后数据围绕0分布，异常值≈2.0。  \n",
+    "- **归一化**：最小值为1，最大值为1000，其他值被压缩到接近0（如4→0.003），导致有效信息丢失。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "总结来说，**标准化通过均值和标准差调整数据分布，适合保留异常值信息；归一化通过极值限定范围，适合需要固定输入的场景**。选择时需结合数据特性和模型需求。"
+   ]
   }
  ],
  "metadata": {
